--- a/Final_Datasets.ipynb
+++ b/Final_Datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 60,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 62,
    "metadata": {
     "collapsed": true
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
@@ -55,7 +55,7 @@
    "source": [
     "def new_dataset(df_old, df_nf):\n",
     "    \n",
-    "    df_old.drop(['Unnamed: 0','host_id','room_id','accommodates','minstay','latitude','longitude','collected'], axis=1, inplace=True)\n",
+    "    df_old.drop(['Unnamed: 0','host_id','room_id','accommodates','latitude','longitude','collected'], axis=1, inplace=True)\n",
     "    df_old.sort_values('neighborhood', inplace=True)\n",
     "    df_old = df_old.reset_index()\n",
     "    df = pd.DataFrame()\n",
@@ -84,7 +84,7 @@
    "source": [
     "def new_dataset1(df_old, df_nf):\n",
     "    \n",
-    "    df_old.drop(['Unnamed: 0','host_id','room_id','accommodates','minstay','latitude','longitude','collected'], axis=1, inplace=True)\n",
+    "    df_old.drop(['Unnamed: 0','host_id','room_id','accommodates','latitude','longitude','collected'], axis=1, inplace=True)\n",
     "    df_old.sort_values('neighborhood', inplace=True)\n",
     "    df_old = df_old.reset_index()\n",
     "    df = pd.DataFrame()\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -161,9 +161,11 @@
        "      <th></th>\n",
        "      <th>bathrooms</th>\n",
        "      <th>bedrooms</th>\n",
+       "      <th>bhk</th>\n",
        "      <th>dist_arprt</th>\n",
        "      <th>host_count</th>\n",
        "      <th>metrostn_count</th>\n",
+       "      <th>minstay</th>\n",
        "      <th>neighborhood</th>\n",
        "      <th>overall_satisfaction</th>\n",
        "      <th>price</th>\n",
@@ -178,9 +180,11 @@
        "      <th>0</th>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.19109</td>\n",
        "      <td>478</td>\n",
        "      <td>6</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>Amerique</td>\n",
        "      <td>5.0</td>\n",
        "      <td>93.0</td>\n",
@@ -193,9 +197,11 @@
        "      <th>1</th>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.19109</td>\n",
        "      <td>478</td>\n",
        "      <td>6</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>Amerique</td>\n",
        "      <td>4.5</td>\n",
        "      <td>73.0</td>\n",
@@ -209,20 +215,20 @@
        "</div>"
       ],
       "text/plain": [
-       "   bathrooms  bedrooms  dist_arprt  host_count  metrostn_count neighborhood  \\\n",
-       "0        1.0       1.0     0.19109         478               6     Amerique   \n",
-       "1        1.0       1.0     0.19109         478               6     Amerique   \n",
+       "   bathrooms  bedrooms  bhk  dist_arprt  host_count  metrostn_count  minstay  \\\n",
+       "0        1.0       1.0  1.0     0.19109         478               6      2.0   \n",
+       "1        1.0       1.0  1.0     0.19109         478               6      2.0   \n",
        "\n",
-       "   overall_satisfaction  price  rest_count  review_count  reviews  \\\n",
-       "0                   5.0   93.0           1          3682        7   \n",
-       "1                   4.5   73.0           1          3682       31   \n",
+       "  neighborhood  overall_satisfaction  price  rest_count  review_count  \\\n",
+       "0     Amerique                   5.0   93.0           1          3682   \n",
+       "1     Amerique                   4.5   73.0           1          3682   \n",
        "\n",
-       "         room_type  \n",
-       "0  Entire home/apt  \n",
-       "1  Entire home/apt  "
+       "   reviews        room_type  \n",
+       "0        7  Entire home/apt  \n",
+       "1       31  Entire home/apt  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
@@ -244,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
@@ -256,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 69,
    "metadata": {
     "collapsed": true
    },
@@ -268,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -311,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -326,9 +332,11 @@
        "      <th></th>\n",
        "      <th>bathrooms</th>\n",
        "      <th>bedrooms</th>\n",
+       "      <th>bhk</th>\n",
        "      <th>dist_arprt</th>\n",
        "      <th>host_count</th>\n",
        "      <th>metrostn_count</th>\n",
+       "      <th>minstay</th>\n",
        "      <th>neighborhood</th>\n",
        "      <th>overall_satisfaction</th>\n",
        "      <th>price</th>\n",
@@ -343,9 +351,11 @@
        "      <th>0</th>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.128496</td>\n",
        "      <td>3498</td>\n",
        "      <td>6</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>Ciutat Vella</td>\n",
        "      <td>4.0</td>\n",
        "      <td>67.0</td>\n",
@@ -358,14 +368,16 @@
        "      <th>1</th>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.128496</td>\n",
        "      <td>3498</td>\n",
        "      <td>6</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>Ciutat Vella</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>28.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>135.0</td>\n",
        "      <td>75</td>\n",
-       "      <td>1</td>\n",
+       "      <td>4</td>\n",
        "      <td>93672</td>\n",
        "      <td>Entire home/apt</td>\n",
        "    </tr>\n",
@@ -374,20 +386,20 @@
        "</div>"
       ],
       "text/plain": [
-       "   bathrooms  bedrooms  dist_arprt  host_count  metrostn_count  neighborhood  \\\n",
-       "0        1.0       0.0    0.128496        3498               6  Ciutat Vella   \n",
-       "1        1.0       1.0    0.128496        3498               6  Ciutat Vella   \n",
+       "   bathrooms  bedrooms  bhk  dist_arprt  host_count  metrostn_count  minstay  \\\n",
+       "0        1.0       0.0  1.0    0.128496        3498               6      2.0   \n",
+       "1        1.0       1.0  1.0    0.128496        3498               6      1.0   \n",
        "\n",
-       "   overall_satisfaction  price  rest_count  reviews  reviews_count  \\\n",
-       "0                   4.0   67.0          75       27          93672   \n",
-       "1                   4.0   28.0          75        1          93672   \n",
+       "   neighborhood  overall_satisfaction  price  rest_count  reviews  \\\n",
+       "0  Ciutat Vella                   4.0   67.0          75       27   \n",
+       "1  Ciutat Vella                   4.5  135.0          75        4   \n",
        "\n",
-       "         room_type  \n",
-       "0  Entire home/apt  \n",
-       "1  Entire home/apt  "
+       "   reviews_count        room_type  \n",
+       "0          93672  Entire home/apt  \n",
+       "1          93672  Entire home/apt  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 72,
    "metadata": {
     "collapsed": true
    },
@@ -491,10 +503,11 @@
        "      <th></th>\n",
        "      <th>bathrooms</th>\n",
        "      <th>bedrooms</th>\n",
+       "      <th>bhk</th>\n",
        "      <th>dist_arprt</th>\n",
        "      <th>host_count</th>\n",
-       "      <th>level_0</th>\n",
        "      <th>metrostn_count</th>\n",
+       "      <th>minstay</th>\n",
        "      <th>neighborhood</th>\n",
        "      <th>overall_satisfaction</th>\n",
        "      <th>price</th>\n",
@@ -507,52 +520,54 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
        "      <td>0.057015</td>\n",
        "      <td>1206</td>\n",
-       "      <td>4458</td>\n",
        "      <td>30</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>Charlottenburg-Wilmersdorf</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>87.0</td>\n",
+       "      <td>80.0</td>\n",
        "      <td>9</td>\n",
        "      <td>11850</td>\n",
-       "      <td>8</td>\n",
+       "      <td>1</td>\n",
        "      <td>Entire home/apt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>0.057015</td>\n",
        "      <td>1206</td>\n",
-       "      <td>11591</td>\n",
        "      <td>30</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>Charlottenburg-Wilmersdorf</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>44.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>104.0</td>\n",
        "      <td>9</td>\n",
        "      <td>11850</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Private room</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Entire home/apt</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   bathrooms  bedrooms  dist_arprt  host_count  level_0  metrostn_count  \\\n",
-       "0        1.0       1.0    0.057015        1206     4458              30   \n",
-       "1        1.0       1.0    0.057015        1206    11591              30   \n",
+       "   bathrooms  bedrooms   bhk  dist_arprt  host_count  metrostn_count  minstay  \\\n",
+       "0        8.0      10.0  10.0    0.057015        1206              30      1.0   \n",
+       "1        1.0       2.0   2.0    0.057015        1206              30      3.0   \n",
        "\n",
        "                 neighborhood  overall_satisfaction  price  rest_count  \\\n",
-       "0  Charlottenburg-Wilmersdorf                   5.0   87.0           9   \n",
-       "1  Charlottenburg-Wilmersdorf                   5.0   44.0           9   \n",
+       "0  Charlottenburg-Wilmersdorf                   5.0   80.0           9   \n",
+       "1  Charlottenburg-Wilmersdorf                   4.0  104.0           9   \n",
        "\n",
        "   review_count  reviews        room_type  \n",
-       "0         11850        8  Entire home/apt  \n",
-       "1         11850        2     Private room  "
+       "0         11850        1  Entire home/apt  \n",
+       "1         11850        1  Entire home/apt  "
       ]
      },
      "execution_count": 76,
@@ -566,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
@@ -577,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 78,
    "metadata": {
     "collapsed": true
    },
@@ -589,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 79,
    "metadata": {
     "collapsed": true
    },
@@ -601,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false
    },
@@ -644,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 81,
    "metadata": {
     "collapsed": true
    },
@@ -655,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 82,
    "metadata": {
     "collapsed": true
    },
@@ -667,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 83,
    "metadata": {
     "collapsed": true
    },
@@ -679,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false
    },
@@ -722,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false
    },
@@ -737,9 +752,11 @@
        "      <th></th>\n",
        "      <th>bathrooms</th>\n",
        "      <th>bedrooms</th>\n",
+       "      <th>bhk</th>\n",
        "      <th>dist_arprt</th>\n",
        "      <th>host_count</th>\n",
        "      <th>metrostn_count</th>\n",
+       "      <th>minstay</th>\n",
        "      <th>neighborhood</th>\n",
        "      <th>overall_satisfaction</th>\n",
        "      <th>price</th>\n",
@@ -754,9 +771,11 @@
        "      <th>0</th>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.251722</td>\n",
        "      <td>8989</td>\n",
        "      <td>13</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>Municipio 1</td>\n",
        "      <td>2.0</td>\n",
        "      <td>167.0</td>\n",
@@ -769,9 +788,11 @@
        "      <th>1</th>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.251722</td>\n",
        "      <td>8989</td>\n",
        "      <td>13</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>Municipio 1</td>\n",
        "      <td>4.5</td>\n",
        "      <td>121.0</td>\n",
@@ -785,20 +806,20 @@
        "</div>"
       ],
       "text/plain": [
-       "   bathrooms  bedrooms  dist_arprt  host_count  metrostn_count neighborhood  \\\n",
-       "0        1.0       0.0    0.251722        8989              13  Municipio 1   \n",
-       "1        1.0       1.0    0.251722        8989              13  Municipio 1   \n",
+       "   bathrooms  bedrooms  bhk  dist_arprt  host_count  metrostn_count  minstay  \\\n",
+       "0        1.0       0.0  1.0    0.251722        8989              13      3.0   \n",
+       "1        1.0       1.0  1.0    0.251722        8989              13      3.0   \n",
        "\n",
-       "   overall_satisfaction  price  rest_count  reviews  reviews_count  \\\n",
-       "0                   2.0  167.0          77        0         140078   \n",
-       "1                   4.5  121.0          77       20         140078   \n",
+       "  neighborhood  overall_satisfaction  price  rest_count  reviews  \\\n",
+       "0  Municipio 1                   2.0  167.0          77        0   \n",
+       "1  Municipio 1                   4.5  121.0          77       20   \n",
        "\n",
-       "         room_type  \n",
-       "0  Entire home/apt  \n",
-       "1  Entire home/apt  "
+       "   reviews_count        room_type  \n",
+       "0         140078  Entire home/apt  \n",
+       "1         140078  Entire home/apt  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 86,
    "metadata": {
     "collapsed": true
    },
@@ -817,15 +838,6 @@
    "source": [
     "df_rome.to_csv(path_or_buf='/Users/jyots/Desktop/DS_Projects/airbnb_datasets/Rome_dfm.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
